# proof-of-work-agent

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  README_DEPLOYMENT.md  docker-compose.yml  emergency_blockchain_proof.py  package.json  pyproject.toml  pytest.ini  render.yaml  requirements.txt  run_api.py  start.sh  vercel.json
.github/workflows/: agent.yml  ci.yml  dual-network.yml
agent/: __init__.py  ai_client.py  backup.py  circuit_breaker.py  config.py  connection_pool.py  crypto.py  decision.py  errors.py  events.py  file_lock.py  health.py  heartbeat.py  logger.py  loop.py  main.py  metrics.py  rate_limiter.py  retry.py  scheduler.py  security.py  shutdown.py  state.py  task_queue.py  telemetry.py  validators.py  watchdog.py
api/: __init__.py  routes.py  server.py  websocket.py
colosseum/: __init__.py  api.py  forum.py  project.py  status.py
dashboard/: .gitignore  Dockerfile  next.config.js  package.json  tailwind.config.js
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: ConfigPanel.tsx  CycleHistory.tsx  LogViewer.tsx  MetricsPanel.tsx  TaskManager.tsx
dashboard/src/hooks/: useApi.ts  useWebSocket.ts
data/: .gitkeep
docs/: SELF_HOSTED_RUNNER.md
pow-agent/.github/workflows/: agent.yml
prompts/: solve_task.txt
scripts/: airdrop.py  airdrop_v2.py  auto_setup.py  check_config.py  complete_setup.py  deploy.py  setup_agent.py  setup_selfhosted_runner.sh  simple_airdrop.py  test_cycle.py  validate_all.py
solana/: __init__.py  client.py
solana/program/: Anchor.toml  Cargo.toml
solana/program/programs/pow_bounty/: Cargo.toml
solana/program/programs/pow_bounty/src/: lib.rs
tasks/: sample_tasks.json
tests/: __init__.py  conftest.py  test_advanced_modules.py  test_agent.py  test_api.py  test_colosseum.py  test_integration.py  test_solana.py
