[project]
name = "pow-agent"
version = "1.0.0"
description = "Autonomous Proof-of-Work Agent for Colosseum AI Hackathon"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "POW Agent Team", email = "team@example.com"}
]
keywords = ["solana", "ai", "agent", "proof-of-work", "hackathon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.25.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiofiles>=23.0.0",
    "websockets>=12.0",
    "python-json-logger>=2.0.0",
    "croniter>=2.0.0",
    "diskcache>=5.6.0",
    "psutil>=5.9.0",
    "cachetools>=5.3.0",
    "filelock>=3.13.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-env>=1.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]
solana = [
    "solana>=0.30.0",
    "anchorpy>=0.18.0",
    "base58>=2.1.0",
]
security = [
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=41.0.0",
    "bcrypt>=4.1.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
all = [
    "pow-agent[dev,solana,security,docs]",
]

[project.urls]
Homepage = "https://github.com/nayrbryanGaming/proof-of-work-agent"
Documentation = "https://github.com/nayrbryanGaming/proof-of-work-agent#readme"
Repository = "https://github.com/nayrbryanGaming/proof-of-work-agent"
Issues = "https://github.com/nayrbryanGaming/proof-of-work-agent/issues"

[project.scripts]
pow-agent = "agent.main:main"
pow-api = "api.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "api", "colosseum", "solana"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", ".venv", "node_modules", "build", "dist"]
known_first_party = ["agent", "api", "colosseum", "solana"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # allow raise without from inside except
    "ARG001", # unused function argument
]
exclude = [
    ".git",
    ".venv",
    "node_modules",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG001", "S101"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    ".venv/",
    "node_modules/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short -ra"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.coverage.run]
source = ["agent", "api", "colosseum", "solana"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 60
show_missing = true
